Added 2 dummy apps

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     {% include 'navbar.html' %}
-    {{ request.user }}
-    {{ request.user.is_authenticated }}
+    <!--{{ request.user }}-->
+    <!--{{ request.user.is_authenticated }}-->
     {% block content %}
     replace me
     {% endblock %}
