--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,15 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dummy page</title>
+    <title>My Django Website</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 </head>
 <body>
-    {% include 'navbar.html' %}
+    <div class="container">
+        <div class="navbar">
+            <img src="{% static 'images/logo.png' %}" class="logo">
+            <button type="button">Sign Up</button>
+        </div>
+    <!--{% include 'navbar.html' %}-->
     <!--{{ request.user }}-->
     <!--{{ request.user.is_authenticated }}-->
     {% block content %}
-    replace me
     {% endblock %}
+    </div>
 </body>
 </html>
