--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,32 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
-    <h1>Hello World</h1>
-    <p>This is a template</p>
+<div class="content">
+    <small>Welcome to our</small>
+    <h1>World's<br>Creative Studio</h1>
+    <button type="button">Take a tour</button>
+</div>
+<div class="side-bar">
+    <img src="{% static 'images/menu.png' %}" class="menu">
+
+    <div class="social-links">
+        <img src="{% static 'images/fb.png' %}">
+        <img src="{% static 'images/ig.png' %}">
+        <img src="{% static 'images/tw.png' %}">
+    </div>
+
+    <div class="useful-links">
+        <img src="{% static 'images/share.png' %}">
+        <img src="{% static 'images/info.png' %}">
+    </div>
+</div>
+<div class="bubbles">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+    <img src="{% static 'images/bubble.png' %}">
+</div>
 {% endblock %}
