--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,7 +1,3 @@
 <nav>
-    <ul>
-        <li>Brand</li>
-        <li>Contact</li>
-        <li>About</li>
-    </ul>
+    <p><a href="contact/">Contact Us</a> | <a href="about/">About Us</a></p>
 </nav>
